--- a/consumer/src/CMakeLists.txt
+++ b/consumer/src/CMakeLists.txt
@@ -4,7 +4,9 @@ set(_lib_name clock_consumer_service)
 # A list of source code files
 set(_srcs
         ConsumerActivator.cpp
-        ServiceTime.h
+        ../../shared/src/IServiceTime.h
 )
+
+include_directories("../../shared/src")
 
 GenerateService(${_lib_name} mms ${_srcs})
