Changed file system example as service and consumer registry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ function(GenerateService _name _args)
 endfunction()
 
 add_subdirectory(driver)
-add_subdirectory(mms)
-add_subdirectory(clock)
-add_subdirectory(consumer)
+add_subdirectory(fileWatcherService)
+add_subdirectory(fileWatcherConsumer)
+add_subdirectory(clockService)
+add_subdirectory(clockConsumer)
